mule-user-guide/v/3.3/rss-module-reference.adoc
=  RSS模块参考

Mule RSS支持可以轻松地与RSS订阅源集成。

== 使用Feed

最常见的模式之一是与RSS进行集成，即轮询Feed更新。用骡子这可以很容易地完成。您必须先编写收到RSS聚合条目的课程：

.EntryReceiver.java
[source, java, linenums]
----
package org.mule.module.rss;

import com.sun.syndication.feed.synd.SyndEntry;

public class EntryReceiver
{
    public void readEntry(@Payload SyndEntry entry) throws Exception
    {
        //do stuff
    }
}
----



==  ETag的

Atom HTTP端点默认尊重ETags和304 Not Modified响应代码，因此您不必担心会消耗不必要的更新。

=== 访问Feed本身

如果您想访问Feed本身，则可以通过名为feed.object的当前消息上的标题来使用它。您可以使用注释将其注入到入口点方法中：


.EntryReceiver.java
[source, java]
----
public void processEntry(@Payload Entry entry, @Expr("#[header:invocation:feed.object]") Feed feed) throws Exception
----


[TIP]
@Expr注释仅在 http://www.mulesoft.org/download-mule-esb-community-edition[骡社区版]中可用。

如果您想要处理XML模型，或者使用`java.io.InputStream`或`java.lang.String`来获取原始表示，则组件上的方法应该期望`com.sun.syndication.feed.synd.SyndFeed`对象，或者仅需要`org.w3c.dom.Document`。

.FeedReceiver.java *
[source, java, linenums]
----
public void processFeed(@Payload SyndFeed feed) throws Exception
{
    //do stuff
}
----


== 混合HTTP和RSS端点

`rss:endpoint`元素是创建轮询HTTP终结点并分割馈送的快捷方式。如果您在配置中使用另一个非轮询HTTP端点，请配置HTTP轮询端点并在您的Atom端点上引用它。

[source, xml, linenums]
----
<http:connector name="HttpConnector"/>
 
<http:polling-connector name="PollingHttpConnector" pollingFrequency="1000" discardEmptyContent="false"/>
 
<flow name="eventConsumer">
    <http:inbound-endpoint address="http://localhost:9002/events" connector-ref="PollingHttpConnector"/>
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

== 访问其他协议的源

您可以使用其他Mule连接器（例如JMS，File或XMPP）来处理馈送并处理它们。为此，原子提要需要通过连接器提供，例如通过JMS发送RSS文档或从文件进行轮询。 RSS模式定义了一个`<rss:feed-splitter/>`，可以分割从端点接收到的消息。

=== 通过JMS

[source, xml, linenums]
----
<flow name="feedSplitterConsumer">
    <jms:inbound-endpoint queue="feed.in">
        <rss:feed-splitter/>
    </jms:inbound-endpoint>
 
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

=== 覆盖文件

[source, xml, linenums]
----
<flow name="feedSplitterConsumer">
    <file:inbound-endpoint  path="${mule.working.dir}" pollingFrequency="1000" >
        <file:filename-wildcard-filter pattern="*.rss"/>
        <rss:feed-splitter/>
    </file:inbound-endpoint>
 
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

=== 处理没有RSS端点的提要

以下示例仅供参考，它显示了在不使用`rss:endpoint`的情况下阅读Atom提要的显式配置。

[source, xml, linenums]
----
<http:polling-connector name="PollingHttpConnector" pollingFrequency="1000" discardEmptyContent="false"/>
 
<flow name="feedConsumer">
    <http:inbound-endpoint address="http://rossmason.blogspot.com/feeds/posts/default" connector-ref="PollingHttpConnector">
        <rss:feed-splitter/>
        <rss:entry-last-updated-filter/>           
    </http:inbound-endpoint>
 
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

*Note*：`rss:entry-last-updated-filter`应该位于`<rss:feed-splitter/>`之后，因为您需要分割供稿，以便过滤器可以处理它们。另请注意，我们并未在过滤器上设置`lastUpdate`日期，这意味着默认行为会读取所有可用条目，然后仅处理自上次读取以来的新条目。

==  RSS模块配置

RSS是许多网站用来提供新闻或更新等数据反馈的流行联合格式。

=== 变压器

这些是这种运输特有的变压器。请注意，这些会在启动时自动添加到Mule注册表中。当进行自动转换时，这些包括在搜索正确的变压器时。

[%header,cols="2*"]
|===
| {名称{1}}说明
| object-to-feed-transformer  |将消息的有效负载转换为`com.sun.syndication.feed.synd.SyndFeed`实例。
|===

=== 过滤器

可以使用过滤器来控制允许哪些数据在流中继续。

[%header,cols="2*"]
|===
| {名称{1}}说明
|条目最后更新过滤器 |将基于最后更新日期过滤RSS条目对象。这对于从Feed中过滤较旧的条目很有用。此过滤器仅适用于RSS SyndEntry对象而非SyndFeed对象。
|供稿最后更新过滤器 |将根据其上次更新日期过滤整个RSS供稿。这对处理自特定日期以来尚未更新的Feed是有用的。此过滤器仅适用于RSS SyndFeed对象。
|===

== 进料分离器

将馈送条目拆分为单个条目对象。每个条目都将在Mule中单独发布。

